# minimotto

./: .gitignore  README.md
apps/backend/: .cursorrules  README.md  database.py  items.json  main.py  pyproject.toml  requirements.txt  test.py
apps/backend/lib/: utils.py
apps/webapp/: README.md  drizzle.config.ts  env.example.txt  package.json  pnpm-lock.yaml
apps/webapp/app/: globals.css  layout.tsx  not-found.tsx  robots.txt  sitemap.ts
apps/webapp/app/(app)/: layout.tsx  page.tsx
apps/webapp/app/(app)/_components/: doodle.tsx  search.tsx
apps/webapp/app/(app)/bookmarks/: action.tsx  page.tsx
apps/webapp/app/(app)/bookmarks/_components/: BookmarkItem.tsx
apps/webapp/app/(app)/docs/: page.tsx
apps/webapp/app/(app)/docs/_components/: breadcrumb.tsx  page.tsx  sidebar.tsx
apps/webapp/app/(app)/how-to/torrent/: page.tsx
apps/webapp/app/(app)/search/: action.ts  page.tsx
apps/webapp/app/(app)/search/_components/: BookmarkButton.tsx  DownloadWebtorButton.tsx  MagenetLinkButton.tsx  SearchPage.tsx  SearchResultCards.tsx
apps/webapp/app/(app)/terms/: page.tsx
apps/webapp/app/(app)/u/[user]/: page.tsx
apps/webapp/app/(auth)/_components/: auth-page.tsx
apps/webapp/app/(auth)/login/: page.tsx
apps/webapp/components/shared/: footer.tsx  nav-bar.tsx  page.tsx  user-menu.tsx
apps/webapp/components/ui/: pagination.tsx
apps/webapp/content/: content.ts
apps/webapp/db/schema/: core.ts  schema.ts
apps/webapp/lib/: auth-client.ts  auth.ts  utils.ts
apps/webapp/migrations/meta/: 0000_snapshot.json  _journal.json
apps/webapp/types/: core.ts
(+1 files in other folders)
