[project]
name = "minimotto-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "libtorrent>=2.0.11",
    "libtorrent-windows-dll>=0.0.3",
    "lxml>=6.0.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "xmltodict>=0.14.2",
]
